--- a/snakemake/Snakefile
+++ b/snakemake/Snakefile
@@ -1,16 +1,14 @@
-# Snakefile
+#Snakefile
 #
 # This Snakefile processes three directories of fastq files, corresponding to the three read types of scSLR-seq data
 #
 # Paths and global settings can be viewed and edited in the configfile ./config.yaml
 
 
-
-
 SAMPLES = ["3prime","internal","5prime"]
 
-CHROMS = ["chr"+str(c) for c in range(1, 23)] + ["chrX","chrY","chrM"]
 
+CHROMS = ["chr"+str(c) for c in range(1, 23)] + ["chrX","chrY","chrM"]
 
 
 
@@ -26,28 +24,30 @@ gtf_file = config["gtf_file"]
 
 
 
-
 rule all:
 	input:
-		directory(input_dir + "solo_outs/")
+		directory(input_dir + "STAR_outs/")
 
 
 
 rule tag_fastqs_with_read_type:
 	input:
-		IN_FASTQS = input_dir + "{sample}/{sample}_R2_001.fastq.gz"
+		IN_FASTQS = input_dir + "{sample}/{sample}_{read}_001.fastq.gz"
 	output:
-		OUT_FASTQS = input_dir + "{sample}/{sample}_tagged_R2_001.fastq.gz"
+		OUT_FASTQS = input_dir + "{sample}/{sample}_tagged_{read}_001.fastq.gz"
+	threads:7
+	conda:
+		"SLR.yml"
 	shell:
 		"""
-			sample = {wildcards.sample}
-			bioawk -c fastx -v r=$sample '{{print"@"$name":"r"\n"$comment"\n"$seq"\n+\n"$qual}}' {input.IN_FASTQS} > {output.OUT_FASTQS}
+
+			bioawk -c fastx -v r={wildcards.sample} '{{print"@"$name" "$comment":"r"\\n"$seq"\\n+\\n"$qual}}' {input.IN_FASTQS} | pigz -p {threads} > {output.OUT_FASTQS}
 
 		"""
 
 rule merge_fastqs:
 	input:
-		IN_FASTQS = expand(input_dir + "{sample}/{sample}_R2_001.fastq.gz",sample=SAMPLES)
+		IN_FASTQS = expand(input_dir + "{sample}/{sample}_tagged_R2_001.fastq.gz",sample=SAMPLES)
 	output:
 		OUT_FASTQ = input_dir + "merged_R2_001.fastq.gz"
 	shell:
@@ -68,7 +68,7 @@ rule UMICollapse:
 		EDITS="1"
 	shell:
 		"""
-			UMICollpase fastq \
+			~/bin/UMICollapse/umicollapse fastq \
 					--algo {params.ALGO} \
 					--tag \
 					--umi-seq "\t" \
@@ -85,40 +85,41 @@ rule split_Fastq:
 	input: 
 		IN_FASTQ = input_dir + "UMICollapse_merged_R2_001.fastq.gz"
 	output:
-		OUT_FASTQS = expand(input_dir + "{sample}/{sample}_UMICollapse_R2_001.fastq.gz",sample=SAMPLES)
-	threads:36
+		OUT_FASTQS = input_dir + "{sample}/{sample}_UMI_Collapse_R2_001.fastq.gz"
+	threads:14
 	shell:
 		"""
 			zcat {input.IN_FASTQ} | fgrep -A3 {wildcards.sample} | sed '/^--$/d' | pigz -p {threads} > {output.OUT_FASTQS}
-
-			rm {input.IN_FASTQ}
 
 		"""
 
 
 rule append_barcode_IDs:
 	input:
-		BARCODE_FASTQ = input_dir + "{sample}/{sample}_UMICollapse_R2.fastq",
-		IN_FASTQ = input_dir + "{sample}/{sample}_{read}_001.fastq.gz"
+		BARCODE_FASTQ = input_dir + "{sample}/{sample}_UMI_Collapse_R2_001.fastq.gz",
+		IN_FASTQ = input_dir + "{sample}/{sample}_tagged_{read}_001.fastq.gz"
 	output:
-		OUT_FASTQ = input_dir + "{sample}/{sample}_UMICollapse_{read}.fastq.gz" 
-	threads:16
+		OUT_FASTQ = input_dir + "{sample}/{sample}_UMICollapse_{read}_001.fastq.gz" 
+	threads:7
 	conda:
 		"SLR.yml"
 	shell:
 		"""
-		bioawk -c fastx 'NR==FNR {{split($4,a," ");{{b[$1]=a[2]}}; next}} {{print "@"substr(b[$1],12)":"$name""$comment"\\n" $seq "\\n+\\n" $qual }}' {input.BARCODE_FASTQ} {input.IN_FASTQ} | pigz -p {threads} > {output.OUT_FASTQ}
+		bioawk -c fastx 'NR==FNR {{split($4,a," ");{{b[$1]=a[2]}}; next}} {{print "@"substr(b[$1],12)":"$name" "$comment"\\n" $seq "\\n+\\n" $qual }}' {input.BARCODE_FASTQ} {input.IN_FASTQ} | pigz -p {threads} > {output.OUT_FASTQ}
+
+		rm {input.IN_FASTQ}
 		"""
 
 
 rule get_gene_alignments:
 	input:
-		R1 = input_dir + "{sample}/{sample}_UMICollapse_R1.fastq.gz",
-        R2 = input_dir + "{sample}/{sample}_UMICollapse_R3.fastq.gz",
+		R1 = input_dir + "{sample}/{sample}_UMICollapse_R1_001.fastq.gz",
+        R2 = input_dir + "{sample}/{sample}_UMICollapse_R3_001.fastq.gz",
 		REFDIR = ref_dir,
 		WHITELIST = BC_WHITELIST
 	output:
-		OUT_BAM= input_dir + "{sample}_alignment/Aligned.sortedByCoord.out.bam"	
+		OUT_BAM = input_dir + "{sample}_alignment/Aligned.sortedByCoord.out.bam",
+		OUT_SJDB = input_dir + "{sample}_alignment/SJ.out.tab"
 	params:
 		lib_spec = lambda wildcards: config["3PRIME"] if wildcards.sample == "3prime" else (config["INTERNAL"] if wildcards.sample == "internal" else config["5PRIME"]),
 		outprefix = input_dir + "{sample}_alignment/"
@@ -149,7 +150,7 @@ rule index_alignment_files:
 		OUT_BAMS = input_dir + "{sample}_alignment/Aligned.sortedByCoord.out.bam.bai"
 	conda:
 		"SLR.yml"
-	threads: 36
+	threads: 14
 	shell:
 		"""
 		samtools index -@ {threads} -o {output.OUT_BAMS} {input.IN_BAMS}	
@@ -162,7 +163,7 @@ rule merge_alignment_files:
 		OUT_BAM = input_dir + "merged/merged.bam.unsorted"
 	conda:
 		 "SLR.yml"
-	threads: 36
+	threads: 42
 	shell:
 		"""
 		samtools merge \
@@ -181,7 +182,7 @@ rule sort_alignment_files:
 		OUT_BAM = input_dir + "merged/merged.bam"
 	conda:
 		"SLR.yml"
-	threads: 24
+	threads: 42
 	shell:
 		"""
 		samtools sort -@ {threads} -m 4G {input.IN_BAM} > {output.OUT_BAM}
@@ -216,8 +217,6 @@ rule index_alignment_files_2:
 		samtools index -@ {threads} -o {output.OUT_BAMS} {input.IN_BAMS}
 		"""
 
-
-
 rule add_missing_gene_alignents:
 	input:	
 		GTF = gtf_file,
@@ -230,7 +229,6 @@ rule add_missing_gene_alignents:
 		"scripts/add_gene_tag.py"
 
 
-		
 
 rule add_UMICollapse_group_as_tag:
 	input:
@@ -242,16 +240,34 @@ rule add_UMICollapse_group_as_tag:
 	shell:
 		"""
 		bioawk -H -c sam '{{{{split($qname,a,":" )}} print $0,"UG:i:"a[1] }}' {input.IN_SAM} > {output.OUT_SAM}
-
+		
 		rm {input.IN_SAM}
 
 		"""
 		
-rule sort_sam:
+rule remove_polyG_barcoded_reads:
 	input:
 		IN_SAM = input_dir + "split/{chroms}.barcoded.sam"
 	output:
+		OUT_BAM = input_dir + "split/{chroms}.barcoded.bam"
+	conda:
+		"SLR.yml"
+	threads: 4
+	shell:
+		"""
+		cat {input.IN_SAM} | grep -v UG:i:0 | samtools view -@ {threads} -Sb - > {output.OUT_BAM}
+
+		rm {input.IN_SAM}
+		"""
+
+
+
+rule sort_sam:
+	input:
+		IN_BAM = input_dir + "split/{chroms}.barcoded.bam"
+	output:
 		OUT_BAM = input_dir + "split/{chroms}.barcoded.sort.bam"
+	threads: 4
 	shell:
 		"""
 		samtools sort \
@@ -259,9 +275,9 @@ rule sort_sam:
 			-@ {threads} \
 			-O BAM \
 			-o {output.OUT_BAM} \
-			{input.IN_SAM}
+			{input.IN_BAM}
 
-		rm {input.IN_SAM}
+		rm {input.IN_BAM}
 
 		"""
 
@@ -282,9 +298,10 @@ rule remove_collisions:
 		IN_SAM = input_dir + "split/{chroms}.collisions_marked.sam"
 	output: 
 		OUT_BAM = input_dir + "split/{chroms}.collisions_removed.bam"
+	threads: 4
 	shell:
 		"""
-		cat {input.IN_SAM} | grep -v "\<co:Z:True\>" | samtools view -Sb - > {output.OUT_BAM}
+		cat {input.IN_SAM} | grep -v "\<co:Z:True\>" | samtools view -@ {threads} -Sb - > {output.OUT_BAM}
 		
 		rm {input.IN_SAM}
 
@@ -329,7 +346,7 @@ rule merge_barcoded_files:
 		IN_BAMS = expand(input_dir + "split/{chroms}.complete.sam",chroms=CHROMS)
 	output:
 		OUT_BAM = input_dir + "merged/merged.temp.bam"
-	threads: 36
+	threads: 42
 	shell:
 		 """
 			samtools merge \
@@ -355,7 +372,7 @@ rule sort_merged_bam:
 			samtools sort \
 						-@ {threads} \
 						-o {output.OUT_BAM} \
-						-m 2G \
+						-m 4G \
 						{input.IN_BAM}
 
 			samtools index \
@@ -368,12 +385,12 @@ rule sort_merged_bam:
 
 rule generate_sjdbFile:
 	input:
-		expand(input_dir + "{sample}_alignment/SJ.out.tab",sample=SAMPLES)
+		IN_SJDB = expand(input_dir + "{sample}_alignment/SJ.out.tab",sample=SAMPLES)
 	output:
-		input_dir + "merged/merged_sjdb.tab"
+		OUT_SJDB = input_dir + "merged/merged_sjdb.tab"
 	shell:
 		"""
-			cat {input.IN_BAM} > {output.OUT_BAM}
+		cat {input.IN_SJDB} > {output.OUT_SJDB}
 		"""
 
 
@@ -382,7 +399,7 @@ rule star_count:
 		IN_BAM = input_dir + "merged/merged_complete.bam",
 		SJDB = input_dir + "merged/merged_sjdb.tab"
 	output:
-		OUT_DIR = directory(input_dir + "solo_outs/")
+		OUT_DIR = directory(input_dir + "STAR_outs/")
 	params:
 		REFDIR = ref_dir,
 		WHITELIST = BC_WHITELIST
@@ -392,7 +409,7 @@ rule star_count:
 		STAR \
 			--readFilesIn {input.IN_BAM} \
 			--genomeDir {params.REFDIR} \
-			--sjdbFileChrStartEnd {input.SJDB}
+			--sjdbFileChrStartEnd {input.SJDB} \ 
 			--readFilesType SAM SE \
 			--readFilesCommand samtools view \
 			--runThreadN {threads} \
@@ -404,7 +421,7 @@ rule star_count:
 			--soloFeatures SJ GeneFull \
 			--soloMultiMappers EM \
 			--outSAMmode None \
-			--limitSjdbInsertNsj 50000000 \
+			--limitSjdbInsertNsj 5000000 \  
 			--outFileNamePrefix {output.OUT_DIR}/ \
 			--outSJfilterReads All
 	
