--- a/snakemake/SLR.yml
+++ b/snakemake/SLR.yml
@@ -1,84 +1,84 @@
-name: SLR
+name: SLR_C4
 channels:
   - conda-forge
   - bioconda
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - bz2file=0.98=py_0
+  - _openmp_mutex=4.5=2_gnu
+  - bamutil=1.0.15=h5b5514e_2
+  - bioawk=1.0=h7132678_7
+  - brotli=1.0.9=h166bdaf_7
+  - brotli-bin=1.0.9=h166bdaf_7
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.6.15=ha878542_0
-  - colorama=0.4.5=pyhd8ed1ab_0
+  - ca-certificates=2022.9.24=ha878542_0
+  - certifi=2022.9.24=pyhd8ed1ab_0
+  - contourpy=1.0.5=py310hbf28c38_0
   - cycler=0.11.0=pyhd8ed1ab_0
-  - fastqsplitter=1.0.0=py_0
-  - freetype=2.10.4=h0708190_1
-  - future=0.18.2=py38h578d9bd_5
-  - htseq=2.0.1=py38h7a2e8c7_0
-  - icu=67.1=he1b5a44_0
-  - jpeg=9e=h166bdaf_1
-  - kiwisolver=1.4.2=py38h43d8883_1
-  - krb5=1.19.2=hcc1bbae_3
+  - fonttools=4.37.4=py310h5764c6d_0
+  - freetype=2.12.1=hca18f0e_0
+  - htseq=2.0.2=py310ha14a713_0
+  - jpeg=9e=h166bdaf_2
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.4=py310hbf28c38_0
+  - krb5=1.19.3=h3790be6_0
   - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - libblas=3.9.0=14_linux64_openblas
-  - libcblas=3.9.0=14_linux64_openblas
-  - libcurl=7.81.0=h2574ce0_0
-  - libdeflate=1.9=h7f98852_0
+  - lerc=4.0.0=h27087fc_0
+  - libblas=3.9.0=16_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_7
+  - libbrotlidec=1.0.9=h166bdaf_7
+  - libbrotlienc=1.0.9=h166bdaf_7
+  - libcblas=3.9.0=16_linux64_openblas
+  - libcurl=7.85.0=h7bff187_0
+  - libdeflate=1.13=h166bdaf_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=11.2.0=h1d223b6_12
-  - libgfortran-ng=11.2.0=h69a702a_16
-  - libgfortran5=11.2.0=h5c6108e_16
-  - libgomp=11.2.0=h1d223b6_12
-  - liblapack=3.9.0=14_linux64_openblas
-  - libnghttp2=1.46.0=h812cca2_0
+  - libgcc-ng=12.1.0=h8d9b700_16
+  - libgfortran-ng=12.1.0=h69a702a_16
+  - libgfortran5=12.1.0=hdcd56e2_16
+  - libgomp=12.1.0=h8d9b700_16
+  - liblapack=3.9.0=16_linux64_openblas
+  - libnghttp2=1.47.0=hdcd2b5c_1
   - libnsl=2.0.0=h7f98852_0
-  - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libpng=1.6.37=h21135ba_2
-  - libssh2=1.10.0=ha56f1ee_2
-  - libstdcxx-ng=11.2.0=he4da1e4_12
-  - libtiff=4.2.0=h85742a9_0
-  - libwebp-base=1.2.2=h7f98852_1
-  - libzlib=1.2.11=h36c2ea0_1013
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - matplotlib-base=3.2.2=py38h5d868c9_1
-  - ncurses=6.3=h9c3ff4c_0
-  - numpy=1.22.3=py38h99721a1_2
-  - olefile=0.46=pyh9f0ad1d_1
-  - openssl=1.1.1o=h166bdaf_0
-  - pandas=1.4.2=py38h47df419_1
-  - pigz=2.6=h27826a3_0
-  - pillow=7.2.0=py38h9776b28_2
-  - pip=21.3.1=pyhd8ed1ab_0
-  - pybktree=1.1=pyh9f0ad1d_0
-  - pyfastx=0.8.4=py38h390ddb8_0
-  - pyparsing=3.0.8=pyhd8ed1ab_0
-  - pysam=0.17.0=py38h104f7d5_1
-  - python=3.8.12=hb7a2778_2_cpython
+  - libopenblas=0.3.21=pthreads_h78a6416_3
+  - libpng=1.6.38=h753d276_0
+  - libsqlite=3.39.4=h753d276_0
+  - libssh2=1.10.0=haa6b8db_3
+  - libstdcxx-ng=12.1.0=ha89aaad_16
+  - libtiff=4.4.0=h0e0dad5_3
+  - libuuid=2.32.1=h7f98852_1000
+  - libwebp-base=1.2.4=h166bdaf_0
+  - libxcb=1.13=h7f98852_1004
+  - libzlib=1.2.12=h166bdaf_4
+  - matplotlib-base=3.6.0=py310h8d5ebf3_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - ncurses=6.3=h27087fc_1
+  - numpy=1.23.3=py310h53a5b5f_0
+  - openjpeg=2.5.0=h7d73246_1
+  - openssl=1.1.1q=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pathlib=1.0.1=py310hff52083_6
+  - pillow=9.2.0=py310hbd86126_2
+  - pip=22.2.2=pyhd8ed1ab_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pysam=0.19.1=py310hff46b53_1
+  - python=3.10.6=h582c2e5_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.8=2_cp38
-  - pytz=2022.1=pyhd8ed1ab_0
-  - readline=8.1=h46c0cb4_0
-  - regex=2022.4.24=py38h0a891b7_0
-  - scipy=1.8.0=py38h56a6a73_1
-  - seqkit=2.2.0=h9ee0642_0
-  - setuptools=60.5.0=py38h578d9bd_0
-  - sinto=0.8.1=pyhfa5458b_0
+  - python_abi=3.10=2_cp310
+  - readline=8.1.2=h0f457ee_0
+  - setuptools=65.4.1=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.37.0=h9cd32fc_0
-  - tk=8.6.11=h27826a3_1
-  - tornado=6.1=py38h0a891b7_3
-  - tqdm=4.64.0=pyhd8ed1ab_0
-  - umi_tools=1.1.2=py38hbff2b2d_1
+  - tk=8.6.12=h27826a3_0
+  - tzdata=2022d=h191b570_0
+  - unicodedata2=14.0.0=py310h5764c6d_1
   - wheel=0.37.1=pyhd8ed1ab_0
-  - xopen=0.7.3=py_0
-  - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h36c2ea0_1013
-  - zstd=1.4.9=ha95c52a_0
-  - pip:
-    - llvmlite==0.32.1
-    - parallelbam==0.0.18
-prefix: /home/derek/miniconda3/envs/SLR
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xz=5.2.6=h166bdaf_0
+  - zlib=1.2.12=h166bdaf_4
+  - zstd=1.5.2=h6239696_4
+prefix: /home/derek/miniconda3/envs/SLR_C4
