--- a/notebooks/fig2/sashimi_plots/sashimi.ini
+++ b/notebooks/fig2/sashimi_plots/sashimi.ini
@@ -10,14 +10,14 @@ link_file = ./sashimi_plots/link_T4_Mem.txt
 bw_file = /c4/home/derek/data1/derek/data_scSLR/PBMC/concat_BAMS//T4_Mem.bw
 # Path to links file
 height = 10
-bw_color = #549e79
+bw_color = #997d87
 number_of_bins = 20000
 max_value = 1500
 min_value = 0
 nans_to_zeros = true
 summary_method = mean
 show_data_range = true
-link_color =#549e79
+link_color =#997d87
 fontsize = 10
 # The link in Sashimi plot is a Bezier curve.
 # The height of the curve is calculated from the length of the intron.
@@ -26,7 +26,7 @@ fontsize = 10
 # But the absolute width is calculated from the supplied numbers, which can look too thin or too wide sometimes.
 # Use scale_line_width to scale the absolute line widths.
 # You may need to try several values to get a satisfying result.
-scale_link_height = 10
+scale_link_height = 4
 scale_line_width = 3
 show_number = true
 file_type = sashimiBigWig
@@ -41,14 +41,14 @@ link_file = ./sashimi_plots/link_T4_Naive.txt
 bw_file = /c4/home/derek/data1/derek/data_scSLR/PBMC/concat_BAMS//T4_Naive.bw
 # Path to links file
 height = 10
-bw_color = #d790ff
+bw_color = #809693
 number_of_bins = 20000
 max_value = 1500
 min_value = 0
 nans_to_zeros = true
 summary_method = mean
 show_data_range = true
-link_color =#d790ff
+link_color =#809693
 fontsize = 10
 # The link in Sashimi plot is a Bezier curve.
 # The height of the curve is calculated from the length of the intron.
@@ -57,7 +57,7 @@ fontsize = 10
 # But the absolute width is calculated from the supplied numbers, which can look too thin or too wide sometimes.
 # Use scale_line_width to scale the absolute line widths.
 # You may need to try several values to get a satisfying result.
-scale_link_height = 10
+scale_link_height = 4
 scale_line_width = 3
 show_number = true
 file_type = sashimiBigWig
